get just output
